Disabled torch shadows, changed convergence in profiles

--- a/Risen/DX9Settings.ini
+++ b/Risen/DX9Settings.ini
@@ -21,7 +21,7 @@ Presets = 2;
 
 // Const1 is hud depth, Const2 is hud stretch
 [PRES1]
-Convergence = 0x41000000
+Convergence = 0x42c80000
 Separation = 0x42c80000
 UseSepSettings = true
 UseByDef=True
@@ -29,7 +29,7 @@ Const1 = 0x3e4ccccd
 Const2 = 0x3f800000
 
 [PRES2]
-Convergence = 0x41000000
+Convergence = 0x42c80000
 Separation = 0x42c80000
 UseSepSettings = true
 Const1 = 0x3f000000
