Risen 2 - Fixed point lights without shadows

--- a/Risen2/DX9Settings.ini
+++ b/Risen2/DX9Settings.ini
@@ -26,3 +26,29 @@ UseSepSettings = true
 UseByDef=True
 Const1 = 0x3e4ccccd
 //Const2 = 0x3f800000
+
+[VS06C99936]
+GetMatrixFromReg=0
+UseMatrix=true
+MatrixReg=220
+InverseMatrix=true
+
+[PS92EAC913]
+UseMatrix=true
+MatrixReg=220
+InverseMatrix=true
+
+[PSBAABE331]
+UseMatrix=true
+MatrixReg=220
+InverseMatrix=true
+
+[PS78CC6A5F]
+UseMatrix=true
+MatrixReg=220
+InverseMatrix=true
+
+[PSA63696B8]
+UseMatrix=true
+MatrixReg=220
+InverseMatrix=true
