Fixed some more point lights, fix now works with all convergence values

--- a/Risen2/DX9Settings.ini
+++ b/Risen2/DX9Settings.ini
@@ -52,3 +52,13 @@ InverseMatrix=true
 UseMatrix=true
 MatrixReg=220
 InverseMatrix=true
+
+[PS114D15FE]
+UseMatrix=true
+MatrixReg=220
+InverseMatrix=true
+
+[PS619EED98]
+UseMatrix=true
+MatrixReg=220
+InverseMatrix=true
