Risen 2: Fix point lights with shadows
Fairly straight forward world space correction in vertex + pixel shader.
The main twist was that r1 needs to be corrected in the pixel shader as
well as it is used throughout the rest of the shader to place the light.

I used c210 for the inverse view-projection matrix instead of c220, so
that I could use DoubleInverseMatrix to pass the forwards
view-projection matrix as well. It may be possible to skip this if r0.z
is the depth - I haven't checked.

--- a/Risen2/DX9Settings.ini
+++ b/Risen2/DX9Settings.ini
@@ -33,6 +33,13 @@ UseMatrix=true
 MatrixReg=220
 InverseMatrix=true
 
+[VS3C816E83]
+GetMatrixFromReg=0
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+DoubleInverseMatrix=true
+
 [PS92EAC913]
 UseMatrix=true
 MatrixReg=220
@@ -55,8 +62,12 @@ InverseMatrix=true
 
 [PS114D15FE]
 UseMatrix=true
-MatrixReg=220
+; Using c210-c217 as 220 doesn't have enough room for DoubleInverseMatrix
+; in pixel shaders, which end at c223
+MatrixReg=210
 InverseMatrix=true
+; Needs to be specified in both source + destiation:
+DoubleInverseMatrix=true
 
 [PS619EED98]
 UseMatrix=true
