Replaced some magic numbers in point light shaders with corresponding constant registers.

--- a/Risen2/DX9Settings.ini
+++ b/Risen2/DX9Settings.ini
@@ -28,16 +28,17 @@ Const1 = 0x3e4ccccd
 //Const2 = 0x3f800000
 
 [VS06C99936]
+GetMatrixFromReg=0
 UseMatrix=true
 MatrixReg=220
 InverseMatrix=true
+DoubleInverseMatrix=true
 
 [VS3C816E83]
-GetMatrixFromReg=0
+// Taking matrix from this shader causes some problems in other shaders!
 UseMatrix=true
 MatrixReg=210
 InverseMatrix=true
-DoubleInverseMatrix=true
 
 [PS92EAC913]
 UseMatrix=true
