Risen 3: Fixed point lights

--- a/Risen3/DX9Settings.ini
+++ b/Risen3/DX9Settings.ini
@@ -26,3 +26,31 @@ UseSepSettings = true
 UseByDef=True
 Const1 = 0x3e4ccccd
 //Const2 = 0x3f800000
+
+[VS3003ED90]
+GetMatrixFromReg=0
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+DoubleInverseMatrix=true
+
+[VSDE44680D]
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+
+[PS31BF44AF]
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+
+[PSF3DCE087]
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+DoubleInverseMatrix=true
+
+[PSC13796F0]
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
