Fixed sun, clouds, fog and some more point lights. Disabled sunrays in fog. Added profile installation instructions to README.

--- a/Risen3/DX9Settings.ini
+++ b/Risen3/DX9Settings.ini
@@ -39,6 +39,16 @@ UseMatrix=true
 MatrixReg=210
 InverseMatrix=true
 
+[VS5582054D]
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+
+[VSA6D9CAA4]
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+
 [PS31BF44AF]
 UseMatrix=true
 MatrixReg=210
@@ -51,6 +61,16 @@ InverseMatrix=true
 DoubleInverseMatrix=true
 
 [PSC13796F0]
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+
+[PS1AE1943A]
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+
+[PSC0A7C83A]
 UseMatrix=true
 MatrixReg=210
 InverseMatrix=true
