- Crosshair moved to constant depth - Fixed one new point light shader

--- a/Risen3/DX9Settings.ini
+++ b/Risen3/DX9Settings.ini
@@ -44,6 +44,11 @@ UseMatrix=true
 MatrixReg=210
 InverseMatrix=true
 
+[VSAE635A40]
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+
 [VSA6D9CAA4]
 UseMatrix=true
 MatrixReg=210
@@ -55,6 +60,12 @@ MatrixReg=210
 InverseMatrix=true
 
 [PSF3DCE087]
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+DoubleInverseMatrix=true
+
+[PSC5658A15]
 UseMatrix=true
 MatrixReg=210
 InverseMatrix=true
@@ -74,3 +85,15 @@ InverseMatrix=true
 UseMatrix=true
 MatrixReg=210
 InverseMatrix=true
+
+[PS4E6B70AE]
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+DoubleInverseMatrix=true
+
+//[PS54275C51]
+//GetSampler1FromReg=0
+
+//[VSE8D7D072]
+//SetSampler1ToReg=2
