Added configuration options to Risen 3 fix and added one missing point light shader.

--- a/Risen3/DX9Settings.ini
+++ b/Risen3/DX9Settings.ini
@@ -6,26 +6,45 @@ UseEndScene = true
 UseRenderedShaders = true
 DumpAll=false
 DefVSConst1 = 240  		
-//DefPSConst1 = 240
-PresetsKeysList = 1;
-// F10
+DefPSConst1 = 220
+PresetsKeysList = 1;2;
 RELOADSHADERSKEY = 121
 InitMouse = false
 
 // 0
 [KEY1]
-Key = 57
+Key = 48
 Type = 1
-Presets = 1;
+Presets = 3;1;4;
 
-// Const1 is hud depth, Const2 is hud stretch
+// F4
+[KEY2]
+Key = 115
+Type = 1
+Presets = 2;1;
+
+// Const1 is hud depth
+// Const3 is SSAO enabled (here enabled)
+// Const4 is crosshair depth (here medium)
 [PRES1]
 Convergence = 0x42c80000
 Separation = 0x42c80000
 UseSepSettings = true
 UseByDef=True
 Const1 = 0x3e4ccccd
-//Const2 = 0x3f800000
+Const3 = 0x3f800000
+Const4 = 0x3f400000
+
+// Const3 is SSAO enabled (here disabled)
+[PRES2]
+Const3 = 0x00000000
+
+// Crosshair (far)
+[PRES3]
+Const4 = 0x3f700000
+// Crosshair (near)
+[PRES4]
+Const4 = 0x3f200000
 
 [VS3003ED90]
 GetMatrixFromReg=0
@@ -76,14 +95,13 @@ UseMatrix=true
 MatrixReg=210
 InverseMatrix=true
 
+[PS092905C1]
+UseMatrix=true
+MatrixReg=210
+InverseMatrix=true
+
 [PS4E6B70AE]
 UseMatrix=true
 MatrixReg=210
 InverseMatrix=true
 DoubleInverseMatrix=true
-
-//[PS54275C51]
-//GetSampler1FromReg=0
-
-//[VSE8D7D072]
-//SetSampler1ToReg=2
