Added more Risen3 corsshair fixes.

--- a/Risen3/DX9Settings.ini
+++ b/Risen3/DX9Settings.ini
@@ -5,15 +5,15 @@ DefVSSampler = 258
 UseEndScene = true
 UseRenderedShaders = true
 DumpAll=false
-DefVSConst1 = 240  		
+DefVSConst1 = 240
 DefPSConst1 = 220
 PresetsKeysList = 1;2;
 RELOADSHADERSKEY = 121
 InitMouse = false
 
-// 0
+// R
 [KEY1]
-Key = 48
+Key = 82
 Type = 1
 Presets = 3;1;4;
 
@@ -45,6 +45,25 @@ Const4 = 0x3f700000
 // Crosshair (near)
 [PRES4]
 Const4 = 0x3f200000
+
+[VS398E495B]
+CheckTexCRC=true
+//VBOffsetList=0;
+ValForDefined=0
+ValNotDefined=1
+TexCounterReg=251
+UseDefinedOnly=false
+DefinedTexturesVS=B4D0B9C3;
+//B4D0B9C3: crosshair !
+//EFDE3213,3ECB67A3,D4FD37C7: item icons
+//67662225: white text
+//C3FA94FC: main hud, including ship crosshair
+//8474EE0F: text
+//814B91A9: autosave and "north" marker
+//6D611E59: cursor
+//A7ABD29A: menu item background
+
+//[VB398E495B.0]
 
 [VS3003ED90]
 GetMatrixFromReg=0
