Elex: Cleanly fixed shadows (tile issue still remains)

--- a/Elex/d3dx.ini
+++ b/Elex/d3dx.ini
@@ -612,9 +612,29 @@ fix_sv_position=0
 ; autofix shader option: recompiles all vertex shaders. fixes minor differences in deferred rendering.
 ;recompile_all_vs=0
 
+[ResourceCommonMatrices]
+
 ;------------------------------------------------------------------------------------------------------
 ; Shader manipulations without patches + shader filtering.
 ;------------------------------------------------------------------------------------------------------
+; Get common matrices from some object placement VS and copy them to shader PS
+[ShaderOverrideGetMatrices]
+hash = 25f5a84b9cdc1d09
+ResourceCommonMatrices = vs-cb0
+
+[ShaderOverrideShadowsNear]
+hash = e2152343856ed197
+ps-cb1 = ResourceCommonMatrices
+
+[ShaderOverrideShadowsFar]
+hash = dd103a1809748fb3
+ps-cb1 = ResourceCommonMatrices
+
+[ShaderOverrideShadowsCoarse]
+hash = 66b0a64a5414e5c9
+ps-cb1 = ResourceCommonMatrices
+
+
 ;[ShaderOverride1]
 ;Hash=69732c4f23cb6c48
 ; Custom stereo separation value while rendering objects using this shader.
