--- a/Elex/d3dx.ini
+++ b/Elex/d3dx.ini
@@ -634,6 +634,21 @@ ps-cb1 = ResourceCommonMatrices
 hash = 66b0a64a5414e5c9
 ps-cb1 = ResourceCommonMatrices
 
+[ShaderOverrideDecals1]
+hash = 5197cfb75460428e
+ps-cb3 = ResourceCommonMatrices
+
+[ShaderOverrideDecals2]
+hash = 4e61ddc3373bcffc
+ps-cb3 = ResourceCommonMatrices
+
+[ShaderOverrideDecals3]
+hash = 7d288bf141d72546
+ps-cb3 = ResourceCommonMatrices
+
+[ShaderOverrideDecals4]
+hash = 212441362e071b23
+ps-cb3 = ResourceCommonMatrices
 
 ;[ShaderOverride1]
 ;Hash=69732c4f23cb6c48
