ELEX: Fixed moon

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -147,7 +147,7 @@ x7 = 0
 ; 0: Release mode is with shader hunting disabled, optimized for speed.
 ; 1: Hunting mode enabled
 ; 2: Hunting mode "soft disabled" - can be turned on via the toggle_hunting key
-hunting=1
+hunting=0
 
 ; Highlight mode of currently selected shader / rendertarget.
 ; "skip" = skip shader. don't render anything using the currently selected shader.
@@ -649,6 +649,11 @@ ps-cb3 = ResourceCommonMatrices
 [ShaderOverrideDecals4]
 hash = 212441362e071b23
 ps-cb3 = ResourceCommonMatrices
+
+; Moon VS is also used for some other objects -> filter by PS
+[ShaderOverrideMoon]
+hash = 6d93373529150172
+partner = c1b69b2b909e7fee
 
 ;[ShaderOverride1]
 ;Hash=69732c4f23cb6c48
