--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -650,6 +650,10 @@ ps-cb3 = ResourceCommonMatrices
 hash = 212441362e071b23
 ps-cb3 = ResourceCommonMatrices
 
+[ShaderOverrideDecals5]
+hash = 1a5b8d0c4151dc2e
+ps-cb3 = ResourceCommonMatrices
+
 ; Moon VS is also used for some other objects -> filter by PS
 [ShaderOverrideMoon]
 hash = 6d93373529150172
