ELEX: Fixed specular highlights

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -659,6 +659,13 @@ ps-cb3 = ResourceCommonMatrices
 hash = 6d93373529150172
 partner = c1b69b2b909e7fee
 
+; This is the first shader after all geometry is rendered.
+; Start frame analysis here.
+[ShaderOverrideShadowVS1]
+hash = c399ab228003d90f
+analyse_options = clear_rt dump_rt_dds persist
+
+
 ;[ShaderOverride1]
 ;Hash=69732c4f23cb6c48
 ; Custom stereo separation value while rendering objects using this shader.
