ELEX: Fixed Shadows at the inside of objects.

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -634,6 +634,10 @@ ps-cb1 = ResourceCommonMatrices
 hash = 66b0a64a5414e5c9
 ps-cb1 = ResourceCommonMatrices
 
+[ShaderOverrideShadowsInside]
+hash = 51a679e81e723688
+ps-cb1 = ResourceCommonMatrices
+
 [ShaderOverrideDecals1]
 hash = 5197cfb75460428e
 ps-cb3 = ResourceCommonMatrices
