ELEX: Released version 1.0

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -877,11 +877,11 @@ StereoConvergence = 20
 ;
 ; This changes the green text that the driver displays, and is a good place to
 ; put any reminders to display to the user or just take some credit:
-Comments = "Fix is work in progress"
+Comments = "Fixed with 3Dmigoto"
 ;
 ; Change the rating: "0": 3D Vision Ready, "1": Excellent, "2": Good,
 ;                    "3": Fair, "4": Not Recommended
-Compat = "3"
+Compat = "0"
 ;
 ; If you have added some comments, you probably want to force the green text to
 ; show up when the game is next run. Note that like convergence, 3DMigoto will
