ELEX: Fixed one missing decal shader

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -658,6 +658,10 @@ ps-cb3 = ResourceCommonMatrices
 hash = 1a5b8d0c4151dc2e
 ps-cb3 = ResourceCommonMatrices
 
+[ShaderOverrideDecals6]
+hash = 85777186796fc9cf
+ps-cb3 = ResourceCommonMatrices
+
 ; Moon VS is also used for some other objects -> filter by PS
 [ShaderOverrideMoon]
 hash = 6d93373529150172
