ELEX: Fixed HUD

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -29,7 +29,8 @@ separation=1
 ; Default constants to pass directly to shaders as IniParams
 ; ------------------------------------------------------------------------------------------------------
 [Constants]
-x = 0.2
+; x: HUD depth - 0.24 is MFD depth - not recommended to change
+x = 0.24
 ; y = 1.0
 ; z = 1.2
 ; w = 2.0
@@ -82,51 +83,11 @@ x7 = 0
 ; XB2_LEFT_TRIGGER, though this may be more useful for hunting than playing.
 ;------------------------------------------------------------------------------------------------------
 
-; Example for changing default settings
-;[Key1]
-;Key = z
-;separation = 100.0
-;convergence = 4.0
-;x = 0.98
-
-; Example to support momentary hold type overrides, like aiming.
-;[Key2]
-;Key = RBUTTON
-;convergence = 0.1
-;type = hold
-
-; Example for a toggle override.
-;[Key3]
-;Key = q
-;separation = 0.1
-;type = toggle
-;y = 0.0
-
-; Example for a momentary hold, but with a delay followed by a smooth
-; transition (ms) on hold and release to sync better with the game. Note that
-; delay only works with type=hold (for now), while transitions will work with
-; all types.
-;[Key4]
-;Key = XB_LEFT_TRIGGER
-;type = hold
-;y = 0.25
-;delay = 100
-;transition = 100
-;transition_type = linear
-;release_delay = 0
-;release_transition = 500
-;release_transition_type = cosine
-
-; Example of a cycle transition that might be used to provide several presets
-; that set both convergence and UI depth to suit different scenes in a game.
-; Cosine transitions are used to smooth the changes over 1/10 of a second.
-;[Key5]
-;Key = Q
+; HUD depth 0.24 is MFD depth - not recommended to change
+;[KeyHUD]
+;Key = F2
 ;type = cycle
-;convergence = 1.45, 1.13, 0.98
-;z           = 0.25,  0.5, 0.75
-;transition = 100
-;transition_type = cosine
+;x = 0.4, 0.6, 0.8, 0, 0.24
 
 ; Example of a preset override that can be referenced by one or more [ShaderOverride*]
 ; sections which can be activated / deactivated automatically when one of the shader
@@ -613,10 +574,12 @@ fix_sv_position=0
 ;recompile_all_vs=0
 
 [ResourceCommonMatrices]
+max_copies_per_frame=1
 
 ;------------------------------------------------------------------------------------------------------
 ; Shader manipulations without patches + shader filtering.
 ;------------------------------------------------------------------------------------------------------
+
 ; Get common matrices from some object placement VS and copy them to shader PS
 [ShaderOverrideGetMatrices]
 hash = 25f5a84b9cdc1d09
@@ -667,51 +630,54 @@ ps-cb3 = ResourceCommonMatrices
 hash = 6d93373529150172
 partner = c1b69b2b909e7fee
 
+[ShaderOverrideHUDVS1]
+hash = 5a2af031441c9510
+x2 = o0
+
+[ShaderOverrideHUDVS2]
+hash = effe7759bae34dcb
+x2 = o0
+
+[ShaderOverrideHUDVS3]
+hash = 33a8aa19b311f2b6
+x2 = o0
+
+[ShaderOverrideMFDPS]
+hash = 5c5f709b905594bb
+x2 = o0
+
 ; This is the first shader after all geometry is rendered.
 ; Start frame analysis here.
 [ShaderOverrideShadowVS1]
 hash = c399ab228003d90f
 analyse_options = clear_rt dump_rt_dds persist
 
+;------------------------------------------------------------------------------------------------------
+; texture / render target manipulations
+;------------------------------------------------------------------------------------------------------
+;
+; NOTE: If you are trying to match a texture the same size as the resolution (or
+; a /2, x2, x4 or x8 multiple), you should confirm that the same hash is used
+; on different resolutions, and adjust get_resolution_from if necessary.
+;
+; NOTE: If you find a texture hash seems to change inconsistently, try enabling
+; track_texture_updates in the [Rendering] section.
+;
 
-;[ShaderOverride1]
-;Hash=69732c4f23cb6c48
-; Custom stereo separation value while rendering objects using this shader.
-;Separation=0
-; Custom stereo convergence value while rendering objects using this
-; shader (e.g. convergence=0 will move an object to infinity).
-;Convergence=0
-; don't draw anything using this shader.
-;Handling=skip
-; Use replaced shader only when there is/is not an active depth buffer (for UI filtering)
-; Deprecated: use 'x = oD' instead, and test for negative zero in the shader with
-; if (asint(IniParams[0].x) == asint(-0.0)) { /* depth inactive */ } else { /* depth active */ }
-;depth_filter = depth_inactive
-;depth_filter = depth_active
-; Only use replaced shader when it is used in conjunction with a specific shader
-; (e.g. to adjust a vertex shader ONLY when it is used with a specific pixel shader)
-;partner=af7b880f07630615
-; Override a value from [Constants] when this shader is used:
-;x=2.0
-; Pass the dimensions of the active render target and resolution (obtained with
-; get_resolution_from) into the shader:
-;x1=rt_width
-;y1=rt_height
-;z1=res_width
-;w1=res_height
-; Use t0 from active pixel shader for texture filtering. Will be 0 if no
-; [TextureOverride*] section exists for the texture or 1 if one does. For advanced
-; filtering, set a value for filter_index in the [TextureOverride] section.
-; This also works with other slot types (like o0, oD, ib, etc).
-;x2=ps-t0
-; Override the shader model to allow using newer features like Texture2DMS:
-;model=vs_5_0
-; Activate a preset section when this shader override is in use.
-;preset = 1
-; There's also support for copying textures, constant buffers, depth buffers,
-; etc. from one shader to another. This is a complex topic - see this page:
-;    https://github.com/bo3b/3Dmigoto/wiki/Resource-Copying
+; Don't stereo correct HUD shaders drawing to backbuffer
+[TextureOverrideHUDBB]
+hash = 91005981
+filter_index = 1
 
+[TextureOverrideMFDBB]
+hash = 339a1d10
+filter_index = 1
+
+; Force HUD depth buffer to stereo to fix one eye issues
+[TextureOverrideHUDDepth]
+hash = a98c980a
+StereoMode = 1
+filter_index = 3
 
 ;------------------------------------------------------------------------------------------------------
 ; On the fly regular expression shader patching engine
@@ -807,38 +773,6 @@ analyse_options = clear_rt dump_rt_dds persist
 ;
 ;[ShaderRegex1.InsertDeclarations]
 ;dcl_resource_texture2d (float,float,float,float) t125
-
-
-;------------------------------------------------------------------------------------------------------
-; texture / render target manipulations
-;------------------------------------------------------------------------------------------------------
-;
-; NOTE: If you are trying to match a texture the same size as the resolution (or
-; a /2, x2, x4 or x8 multiple), you should confirm that the same hash is used
-; on different resolutions, and adjust get_resolution_from if necessary.
-;
-; NOTE: If you find a texture hash seems to change inconsistently, try enabling
-; track_texture_updates in the [Rendering] section.
-;
-;[TextureOverride1]
-;Hash=c3e55ebd
-; NVidia stores surface creation mode heuristics in the game profile. setting
-; this option overrides the creation mode for a given texture / buffer.
-; 0 = NVAPI_STEREO_SURFACECREATEMODE_AUTO - use driver registry profile settings.
-; 1 = NVAPI_STEREO_SURFACECREATEMODE_FORCESTEREO - create stereo surface.
-; 2 = NVAPI_STEREO_SURFACECREATEMODE_FORCEMONO - create mono surface.
-;StereoMode=2
-
-;[TextureOverride2]
-;Hash = e27b9d07
-; Prevent the game reading from this texture - will give the game a blank
-; buffer instead. Used to prevent CryEngine games falsely culling objects. Use
-; the frame analysis log and look for MapType:1 to identify possible hashes.
-;deny_cpu_read=1
-; Expand the region copied to this texture with CopySubresourceRegion (similar
-; issue to rasterizer_disable_scissor). Used to solve issues with transparent
-; refraction effects (like glass) in CryEngine games.
-;expand_region_copy=1
 
 
 ;------------------------------------------------------------------------------------------------------
