ELEX: Added auto-crosshair

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -35,6 +35,9 @@ x = 0.24
 ; z = 1.2
 ; w = 2.0
 
+; Used for crosshair logic
+y2 = 0.0
+
 ; x7 is used by the 3DVision2SBS custom shader. To use, find the [Present]
 ; section below and uncomment the 'run = CustomShader3DVision2SBS' line.
 ; 0 = Regular 3D Vision
@@ -85,9 +88,19 @@ x7 = 0
 
 ; HUD depth 0.24 is MFD depth - not recommended to change
 ;[KeyHUD]
-;Key = F2
+;Key = no_modifiers F2
 ;type = cycle
 ;x = 0.4, 0.6, 0.8, 0, 0.24
+
+[KeyAimMouse]
+Key = no_modifiers VK_RBUTTON
+type = hold
+y2 = 1.0
+
+[KeyAimXB]
+Key = no_modifiers XB_LEFT_TRIGGER
+type = hold
+y2 = 1.0
 
 ; Example of a preset override that can be referenced by one or more [ShaderOverride*]
 ; sections which can be activated / deactivated automatically when one of the shader
@@ -576,6 +589,9 @@ fix_sv_position=0
 [ResourceCommonMatrices]
 max_copies_per_frame=1
 
+[ResourceDepthBuffer]
+max_copies_per_frame=1
+
 ;------------------------------------------------------------------------------------------------------
 ; Shader manipulations without patches + shader filtering.
 ;------------------------------------------------------------------------------------------------------
@@ -592,6 +608,7 @@ ps-cb1 = ResourceCommonMatrices
 [ShaderOverrideShadowsFar]
 hash = dd103a1809748fb3
 ps-cb1 = ResourceCommonMatrices
+ResourceDepthBuffer = ps-t0
 
 [ShaderOverrideShadowsCoarse]
 hash = 66b0a64a5414e5c9
@@ -630,8 +647,11 @@ ps-cb3 = ResourceCommonMatrices
 hash = 6d93373529150172
 partner = c1b69b2b909e7fee
 
+; This shader is used for crosshair as well
 [ShaderOverrideHUDVS1]
 hash = 5a2af031441c9510
+vs-t110 = ResourceDepthBuffer
+vs-cb1 = ResourceCommonMatrices
 x2 = o0
 
 [ShaderOverrideHUDVS2]
