ELEX: Added key to disable temporal AO part

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -31,7 +31,8 @@ separation=1
 [Constants]
 ; x: HUD depth - 0.24 is MFD depth - not recommended to change
 x = 0.24
-; y = 1.0
+; y: Temporal AO - 1.0: enabled, 0.0: disabled
+y = 1.0
 ; z = 1.2
 ; w = 2.0
 
@@ -91,6 +92,11 @@ x7 = 0
 ;Key = no_modifiers F2
 ;type = cycle
 ;x = 0.4, 0.6, 0.8, 0, 0.24
+
+[KeyAO]
+Key = no_modifiers F3
+type = cycle
+y = 0.0, 1.0
 
 [KeyAimMouse]
 Key = no_modifiers VK_RBUTTON
