ELEX: Added HUD depth and convergence hotkeys

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -29,7 +29,7 @@ separation=1
 ; Default constants to pass directly to shaders as IniParams
 ; ------------------------------------------------------------------------------------------------------
 [Constants]
-; x: HUD depth - 0.24 is MFD depth - not recommended to change
+; x: HUD depth - 0.24 is Hex pattern depth
 x = 0.24
 ; y: Temporal AO - 1.0: enabled, 0.0: disabled
 y = 1.0
@@ -87,11 +87,11 @@ x7 = 0
 ; XB2_LEFT_TRIGGER, though this may be more useful for hunting than playing.
 ;------------------------------------------------------------------------------------------------------
 
-; HUD depth 0.24 is MFD depth - not recommended to change
-;[KeyHUD]
-;Key = no_modifiers F2
-;type = cycle
-;x = 0.4, 0.6, 0.8, 0, 0.24
+; HUD depth - 0.24 is Hex pattern depth
+[KeyHUD]
+Key = no_modifiers F2
+type = cycle
+x = 0.5, 0.7, 0.0, 0.24
 
 [KeyAO]
 Key = no_modifiers F3
@@ -107,6 +107,12 @@ y2 = 1.0
 Key = no_modifiers XB_LEFT_TRIGGER
 type = hold
 y2 = 1.0
+
+[KeyConvMFD]
+Key = no_modifiers F4
+type = toggle
+convergence = 20
+x = 0.24
 
 ; Example of a preset override that can be referenced by one or more [ShaderOverride*]
 ; sections which can be activated / deactivated automatically when one of the shader
@@ -837,7 +843,7 @@ StereoFlagsDX10 = 0x00004008
 ; the user's custom convergence if it has another reason to update the profile,
 ; such as a change to another setting (adding a version tag to the Comments
 ; setting would be one way to force an update):
-StereoConvergence = 20
+StereoConvergence = 30
 ;
 ; This changes the green text that the driver displays, and is a good place to
 ; put any reminders to display to the user or just take some credit:
