ELEX: Ported Point light compute shader fixes to ShaderRegex.

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -806,6 +806,71 @@ filter_index = 3
 ;[ShaderRegex1.InsertDeclarations]
 ;dcl_resource_texture2d (float,float,float,float) t125
 
+[ShaderRegexPointLightCS]
+shader_model = cs_5_0
+temps = stereo tmp1
+
+[ShaderRegexPointLightCS.Pattern]
+(?s)
+(?P<part1>
+	\s*ld_indexable\(texture2d\)\(float,float,float,float\)\s
+		(?P<reg_depth>r\d+)\.(?P<reg_depth_sw>[xyzw]), r\d+.[xyzw]{4}, t2.[xyzw]{4}\n
+	\s*mul r\d+\.[xyzw], r\d+\.[xyzw], cb0\[5\]\.x\n
+	\s*utof r\d+\.[xyzw]{2}, r\d+.[xyzw]{4}\n
+	\s*mad (?P<reg_pos>r\d+).xy, r\d+\.[xyzw]{4}, cb0\[0\]\.[xy]{4}, cb0\[0\]\.[zw]{4}\n
+	\s*mov r\d\.zw, l\(0,0,1\.000000,1\.000000\)\n
+)
+(?P<part2>
+	\s*dp3 (?P<reg_x1>r\d+)\.x, r\d+\.xyzx, cb0\[1\]\.xyzx\n
+	\s*dp3 r\d+\.y, r\d+\.xyzx, cb0\[2\]\.xyzx\n
+	\s*dp3 r\d+\.z, r\d+\.xyzx, cb0\[3\]\.xyzx\n
+	\s*mul (?P<reg_x2>r\d+)\.xyz, r\d+\.(x|y|z|w){4}, r\d+\.xyzx\n
+)
+(?P<part3>.*?mov (?P<reg_ptr>r\d+)\.w, l\(0\))
+(?P<part4>
+	\s*ld_indexable\(texture3d\)\(uint,uint,uint,uint\) r\d+\.[xyzw]{2}, r\d+\.xyzw, t10\.[xyzw]{4}
+)
+
+[ShaderRegexPointLightCS.Pattern.Replace]
+\n
+${part1}
+// Fix point lights, including shadows:\n
+ld_indexable(texture2d)(float,float,float,float) ${stereo}.xyzw, l(0, 0, 0, 0), t125.xyzw\n
+// Move scaling before matrix transformation\n
+mul ${tmp1}.xyz, ${reg_depth}.${reg_depth_sw}${reg_depth_sw}${reg_depth_sw}${reg_depth_sw}, ${reg_pos}.xyzx\n
+// Apply fix\n
+add ${stereo}.w, ${reg_depth}.${reg_depth_sw}, -${stereo}.y\n
+mul ${stereo}.w, ${stereo}.w, ${stereo}.x\n
+add ${tmp1}.x, ${tmp1}.x, -${stereo}.w\n
+// Matrix transformation without scaling\n
+dp3 ${reg_x2}.x, ${tmp1}.xyzx, cb0[1].xyzx\n
+dp3 ${reg_x2}.y, ${tmp1}.xyzx, cb0[2].xyzx\n
+dp3 ${reg_x2}.z, ${tmp1}.xyzx, cb0[3].xyzx\n
+// Fix r3 as well as it is used later\n
+rcp ${tmp1}.w, ${reg_depth}.${reg_depth_sw}\n
+mul ${reg_x1}.xyz, ${reg_x2}.xyz, ${tmp1}.w\n
+${part3}
+// Fix light tiles by adjusting integer pointer\n
+mul ${stereo}.w, ${tmp1}.w, ${stereo}.y
+add ${stereo}.w, l(1.0), -${stereo}.w
+mul ${stereo}.w, ${stereo}.w, ${stereo}.x
+mul ${stereo}.w, ${stereo}.w, l(40.0)
+round_ne, ${stereo}.w, ${stereo}.w
+ftoi ${tmp1}.xyzw, ${stereo}.xyzw
+iadd ${reg_ptr}.x, ${reg_ptr}.x, -${tmp1}.w
+iadd ${reg_ptr}.x, ${reg_ptr}.x, ${tmp1}.z
+${part4}\n
+
+; Fix light tiles by adjusting integer pointer ${reg_ptr}.x:
+;  * ${tmp1}.w is reciprocal depth from above
+;  * ${stereo}.z is ±1, dependent on the rendered eye
+;  * 40 is l(80/2) from a few lines above
+;  The complete fix translates to :
+;    pointer.x += 1 - int(round(stereo.x * (1-depth/stereo.y) * 40))
+
+[ShaderRegexPointLightCS.InsertDeclarations]
+dcl_resource_texture2d (float,float,float,float) t125
+
 
 ;------------------------------------------------------------------------------------------------------
 ; Example of settings override by mouse button configuration
