--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -826,47 +826,44 @@ temps = stereo tmp1
 	\s*dp3 r\d+\.z, r\d+\.xyzx, cb0\[3\]\.xyzx\n
 	\s*mul (?P<reg_x2>r\d+)\.xyz, r\d+\.(x|y|z|w){4}, r\d+\.xyzx\n
 )
-(?P<part3>.*?mov (?P<reg_ptr>r\d+)\.w, l\(0\))
+(?P<part3>.*?mov (?P<reg_ptr>r\d+)\.w, l\(0\)\n)
 (?P<part4>
-	\s*ld_indexable\(texture3d\)\(uint,uint,uint,uint\) r\d+\.[xyzw]{2}, r\d+\.xyzw, t10\.[xyzw]{4}
+	\s*ld_indexable\(texture3d\)\(uint,uint,uint,uint\) r\d+\.[xyzw]{2}, r\d+\.xyzw, t10\.[xyzw]{4}\n
 )
 
 [ShaderRegexPointLightCS.Pattern.Replace]
-\n
-${part1}
-// Fix point lights, including shadows:\n
+\n${part1}
+; Fix point lights, including shadows:
 ld_indexable(texture2d)(float,float,float,float) ${stereo}.xyzw, l(0, 0, 0, 0), t125.xyzw\n
-// Move scaling before matrix transformation\n
+; Move scaling before matrix transformation
 mul ${tmp1}.xyz, ${reg_depth}.${reg_depth_sw}${reg_depth_sw}${reg_depth_sw}${reg_depth_sw}, ${reg_pos}.xyzx\n
-// Apply fix\n
+; Apply fix
 add ${stereo}.w, ${reg_depth}.${reg_depth_sw}, -${stereo}.y\n
 mul ${stereo}.w, ${stereo}.w, ${stereo}.x\n
 add ${tmp1}.x, ${tmp1}.x, -${stereo}.w\n
-// Matrix transformation without scaling\n
+; Matrix transformation without scaling
 dp3 ${reg_x2}.x, ${tmp1}.xyzx, cb0[1].xyzx\n
 dp3 ${reg_x2}.y, ${tmp1}.xyzx, cb0[2].xyzx\n
 dp3 ${reg_x2}.z, ${tmp1}.xyzx, cb0[3].xyzx\n
-// Fix r3 as well as it is used later\n
+; Fix r3 as well as it is used later
 rcp ${tmp1}.w, ${reg_depth}.${reg_depth_sw}\n
 mul ${reg_x1}.xyz, ${reg_x2}.xyz, ${tmp1}.w\n
 ${part3}
-// Fix light tiles by adjusting integer pointer\n
-mul ${stereo}.w, ${tmp1}.w, ${stereo}.y
-add ${stereo}.w, l(1.0), -${stereo}.w
-mul ${stereo}.w, ${stereo}.w, ${stereo}.x
-mul ${stereo}.w, ${stereo}.w, l(40.0)
-round_ne, ${stereo}.w, ${stereo}.w
-ftoi ${tmp1}.xyzw, ${stereo}.xyzw
-iadd ${reg_ptr}.x, ${reg_ptr}.x, -${tmp1}.w
-iadd ${reg_ptr}.x, ${reg_ptr}.x, ${tmp1}.z
-${part4}\n
-
 ; Fix light tiles by adjusting integer pointer ${reg_ptr}.x:
 ;  * ${tmp1}.w is reciprocal depth from above
 ;  * ${stereo}.z is ±1, dependent on the rendered eye
 ;  * 40 is l(80/2) from a few lines above
 ;  The complete fix translates to :
 ;    pointer.x += 1 - int(round(stereo.x * (1-depth/stereo.y) * 40))
+mul ${stereo}.w, ${tmp1}.w, ${stereo}.y\n
+add ${stereo}.w, l(1.0), -${stereo}.w\n
+mul ${stereo}.w, ${stereo}.w, ${stereo}.x\n
+mul ${stereo}.w, ${stereo}.w, l(40.0)\n
+round_ne, ${stereo}.w, ${stereo}.w\n
+ftoi ${tmp1}.xyzw, ${stereo}.xyzw\n
+iadd ${reg_ptr}.x, ${reg_ptr}.x, -${tmp1}.w\n
+iadd ${reg_ptr}.x, ${reg_ptr}.x, ${tmp1}.z\n
+${part4}\n
 
 [ShaderRegexPointLightCS.InsertDeclarations]
 dcl_resource_texture2d (float,float,float,float) t125
