ELEX: Fixed decals without fudge constants, fix now works at any resolution

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -633,26 +633,32 @@ ps-cb1 = ResourceCommonMatrices
 [ShaderOverrideDecals1]
 hash = 5197cfb75460428e
 ps-cb3 = ResourceCommonMatrices
+x1 = res_width
 
 [ShaderOverrideDecals2]
 hash = 4e61ddc3373bcffc
 ps-cb3 = ResourceCommonMatrices
+x1 = res_width
 
 [ShaderOverrideDecals3]
 hash = 7d288bf141d72546
 ps-cb3 = ResourceCommonMatrices
+x1 = res_width
 
 [ShaderOverrideDecals4]
 hash = 212441362e071b23
 ps-cb3 = ResourceCommonMatrices
+x1 = res_width
 
 [ShaderOverrideDecals5]
 hash = 1a5b8d0c4151dc2e
 ps-cb3 = ResourceCommonMatrices
+x1 = res_width
 
 [ShaderOverrideDecals6]
 hash = 85777186796fc9cf
 ps-cb3 = ResourceCommonMatrices
+x1 = res_width
 
 ; Moon VS is also used for some other objects -> filter by PS
 [ShaderOverrideMoon]
