ELEX: Fixed menu HEX pattern for any HUD depths any resolutions

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -29,7 +29,7 @@ separation=1
 ; Default constants to pass directly to shaders as IniParams
 ; ------------------------------------------------------------------------------------------------------
 [Constants]
-; x: HUD depth - 0.24 is Hex pattern depth
+; x: HUD depth
 x = 0.24
 ; y: Temporal AO - 1.0: enabled, 0.0: disabled
 y = 1.0
@@ -87,7 +87,7 @@ x7 = 0
 ; XB2_LEFT_TRIGGER, though this may be more useful for hunting than playing.
 ;------------------------------------------------------------------------------------------------------
 
-; HUD depth - 0.24 is Hex pattern depth
+; HUD depth
 [KeyHUD]
 Key = no_modifiers F2
 type = cycle
@@ -683,6 +683,18 @@ x2 = o0
 [ShaderOverrideMFDPS]
 hash = 5c5f709b905594bb
 x2 = o0
+
+[ShaderOverrideHEXLoadscreen]
+hash = 8fdf2d89355a47fc
+x1 = res_width
+
+[ShaderOverrideHEXIngameMenu]
+hash = 7235a20d31b252a9
+x1 = res_width
+
+[ShaderOverrideHEXMainMenu]
+hash = a96b2edea6486c4b
+x1 = res_width
 
 ; This is the first shader after all geometry is rendered.
 ; Start frame analysis here.
