ELEX: Updated some shader hashes to patch 1.0.2946

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -610,7 +610,7 @@ max_copies_per_frame=1
 
 ; Get common matrices from some object placement VS and copy them to shader PS
 [ShaderOverrideGetMatrices]
-hash = 25f5a84b9cdc1d09
+hash = 72108d31388e581f
 ResourceCommonMatrices = vs-cb0
 
 [ShaderOverrideShadowsNear]
@@ -662,8 +662,8 @@ x1 = res_width
 
 ; Moon VS is also used for some other objects -> filter by PS
 [ShaderOverrideMoon]
-hash = 6d93373529150172
-partner = c1b69b2b909e7fee
+hash = ddcfd1d4c92d8427
+partner = a0fa95198f2dacf7
 
 ; This shader is used for crosshair as well
 [ShaderOverrideHUDVS1]
@@ -672,8 +672,11 @@ vs-t110 = ResourceDepthBuffer
 vs-cb1 = ResourceCommonMatrices
 x2 = o0
 
+; This is the first HUD shader after everything is rendered.
+; Stop frame analysis here.
 [ShaderOverrideHUDVS2]
 hash = effe7759bae34dcb
+;analyse_options = clear_rt persist
 x2 = o0
 
 [ShaderOverrideHUDVS3]
@@ -699,8 +702,8 @@ x1 = res_width
 ; This is the first shader after all geometry is rendered.
 ; Start frame analysis here.
 [ShaderOverrideShadowVS1]
-hash = c399ab228003d90f
-analyse_options = clear_rt dump_rt_dds persist
+hash = 58857c3d07e5fee6
+;analyse_options = clear_rt dump_rt_dds dump_tex_dds persist
 
 ;------------------------------------------------------------------------------------------------------
 ; texture / render target manipulations
