ELEX: Ported shadow fix to ShaderRegex and updated it to patch 1.0.2946.

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -613,23 +613,6 @@ max_copies_per_frame=1
 hash = 72108d31388e581f
 ResourceCommonMatrices = vs-cb0
 
-[ShaderOverrideShadowsNear]
-hash = e2152343856ed197
-ps-cb1 = ResourceCommonMatrices
-
-[ShaderOverrideShadowsFar]
-hash = dd103a1809748fb3
-ps-cb1 = ResourceCommonMatrices
-ResourceDepthBuffer = ps-t0
-
-[ShaderOverrideShadowsCoarse]
-hash = 66b0a64a5414e5c9
-ps-cb1 = ResourceCommonMatrices
-
-[ShaderOverrideShadowsInside]
-hash = 51a679e81e723688
-ps-cb1 = ResourceCommonMatrices
-
 [ShaderOverrideDecals1]
 hash = 5197cfb75460428e
 ps-cb3 = ResourceCommonMatrices
@@ -889,6 +872,46 @@ ${part4}\n
 [ShaderRegexPointLightCS.InsertDeclarations]
 dcl_resource_texture2d (float,float,float,float) t125
 
+; NOTE: constant buffer offsets may change after a patch
+[ShaderRegexShadowPS]
+shader_model = ps_5_0
+temps = stereo
+ps-cb1 = ResourceCommonMatrices
+post ps-cb1 = null
+ResourceDepthBuffer = ps-t0
+
+[ShaderRegexShadowPS.Pattern]
+(?s)
+(?P<part1>
+	ld_indexable\(texture2d\)\(float,float,float,float\)\s
+		(?P<reg_depth>r\d+)\.(?P<reg_depth_sw>[xyzw]), r\d+\.[xyzw]{4}, t0\.[xyzw]{4}\n
+	.*?
+	mad r\d+\.[xyzw]{2}, v0\.[xy]{4}, cb0\[5\]\.[xy]{4}, cb0\[5\]\.[zw]{4}\n
+	mul (?P<reg_pos>r\d+)\.[xyzw]{2}, r\d+\.(x|y|z|w){4}, r\d+\.[xyzw]{4}\n
+	mov r\d+\.w, l\(1\.000000\)\n
+)
+(?P<part2>
+	dp4 r\d+\.[xyzw], r\d+\.xyzw, cb0\[6\].xyzw\n
+	dp4 r\d+\.[xyzw], r\d+\.xyzw, cb0\[7\].xyzw\n
+	dp4 r\d+\.[xyzw], r\d+\.xyzw, cb0\[8\].xyzw\n
+)
+
+[ShaderRegexShadowPS.Pattern.Replace]
+${part1}\n
+; Fix shadows:
+; float4 stereo = StereoParams.Load(0);
+; r1.x -= stereo.x * (r1.z - stereo.y / m_fFar) * m_matInvProjection._m00;
+ld_indexable(texture2d)(float,float,float,float) ${stereo}.xyzw, l(0, 0, 0, 0), t125.xyzw\n
+div ${stereo}.w, ${stereo}.y, cb1[34].w\n
+add ${stereo}.w, ${reg_depth}.${reg_depth_sw}, -${stereo}.w\n
+mul ${stereo}.w, ${stereo}.w, cb1[4].x\n
+mul ${stereo}.w, ${stereo}.w, ${stereo}.x\n
+add ${reg_pos}.x, ${reg_pos}.x, -${stereo}.w\n
+\n${part2}
+
+[ShaderRegexShadowPS.InsertDeclarations]
+dcl_constantbuffer cb1[47], immediateIndexed
+dcl_resource_texture2d (float,float,float,float) t125
 
 ;------------------------------------------------------------------------------------------------------
 ; Example of settings override by mouse button configuration
