ELEX: Updated point light fix pattern to patch 1.0.2946.

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -818,10 +818,9 @@ temps = stereo tmp1
 (?s)
 (?P<part1>
 	\s*ld_indexable\(texture2d\)\(float,float,float,float\)\s
-		(?P<reg_depth>r\d+)\.(?P<reg_depth_sw>[xyzw]), r\d+.[xyzw]{4}, t2.[xyzw]{4}\n
+		(?P<reg_depth>r\d+)\.(?P<reg_depth_sw>[xyzw]), r\d+\.[xyzw]{4}, t2\.[xyzw]{4}\n
 	\s*mul r\d+\.[xyzw], r\d+\.[xyzw], cb0\[5\]\.x\n
-	\s*utof r\d+\.[xyzw]{2}, r\d+.[xyzw]{4}\n
-	\s*mad (?P<reg_pos>r\d+).xy, r\d+\.[xyzw]{4}, cb0\[0\]\.[xy]{4}, cb0\[0\]\.[zw]{4}\n
+	\s*mad (?P<reg_pos>r\d+)\.xy, r\d+\.[xyzw]{4}, cb0\[0\]\.[xy]{4}, cb0\[0\]\.[zw]{4}\n
 	\s*mov r\d\.zw, l\(0,0,1\.000000,1\.000000\)\n
 )
 (?P<part2>
@@ -836,7 +835,7 @@ temps = stereo tmp1
 )
 
 [ShaderRegexPointLightCS.Pattern.Replace]
-\n${part1}
+${part1}\n
 ; Fix point lights, including shadows:
 ld_indexable(texture2d)(float,float,float,float) ${stereo}.xyzw, l(0, 0, 0, 0), t125.xyzw\n
 ; Move scaling before matrix transformation
@@ -852,7 +851,7 @@ dp3 ${reg_x2}.z, ${tmp1}.xyzx, cb0[3].xyzx\n
 ; Fix r3 as well as it is used later
 rcp ${tmp1}.w, ${reg_depth}.${reg_depth_sw}\n
 mul ${reg_x1}.xyz, ${reg_x2}.xyz, ${tmp1}.w\n
-${part3}
+\n${part3}\n
 ; Fix light tiles by adjusting integer pointer ${reg_ptr}.x:
 ;  * ${tmp1}.w is reciprocal depth from above
 ;  * ${stereo}.z is ±1, dependent on the rendered eye
@@ -867,7 +866,7 @@ round_ne, ${stereo}.w, ${stereo}.w\n
 ftoi ${tmp1}.xyzw, ${stereo}.xyzw\n
 iadd ${reg_ptr}.x, ${reg_ptr}.x, -${tmp1}.w\n
 iadd ${reg_ptr}.x, ${reg_ptr}.x, ${tmp1}.z\n
-${part4}\n
+\n${part4}
 
 [ShaderRegexPointLightCS.InsertDeclarations]
 dcl_resource_texture2d (float,float,float,float) t125
