ELEX: Ported decal fix to ShaderRegex and updated it to patch 1.0.2946.

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -613,36 +613,6 @@ max_copies_per_frame=1
 hash = 72108d31388e581f
 ResourceCommonMatrices = vs-cb0
 
-[ShaderOverrideDecals1]
-hash = 5197cfb75460428e
-ps-cb3 = ResourceCommonMatrices
-x1 = res_width
-
-[ShaderOverrideDecals2]
-hash = 4e61ddc3373bcffc
-ps-cb3 = ResourceCommonMatrices
-x1 = res_width
-
-[ShaderOverrideDecals3]
-hash = 7d288bf141d72546
-ps-cb3 = ResourceCommonMatrices
-x1 = res_width
-
-[ShaderOverrideDecals4]
-hash = 212441362e071b23
-ps-cb3 = ResourceCommonMatrices
-x1 = res_width
-
-[ShaderOverrideDecals5]
-hash = 1a5b8d0c4151dc2e
-ps-cb3 = ResourceCommonMatrices
-x1 = res_width
-
-[ShaderOverrideDecals6]
-hash = 85777186796fc9cf
-ps-cb3 = ResourceCommonMatrices
-x1 = res_width
-
 ; Moon VS is also used for some other objects -> filter by PS
 [ShaderOverrideMoon]
 hash = ddcfd1d4c92d8427
@@ -910,6 +880,75 @@ add ${reg_pos}.x, ${reg_pos}.x, -${stereo}.w\n
 
 [ShaderRegexShadowPS.InsertDeclarations]
 dcl_constantbuffer cb1[47], immediateIndexed
+dcl_resource_texture2d (float,float,float,float) t125
+
+
+[ShaderRegexDecalPS]
+shader_model = ps_5_0
+temps = stereo tmp1 tmp2
+ps-cb3 = ResourceCommonMatrices
+post ps-cb3 = null
+x1 = res_width
+
+[ShaderRegexDecalPS.Pattern]
+(?s)
+(?P<part1>
+	ld_indexable\(texture2d\)\(float,float,float,float\)\s
+		(?P<reg_depth>r\d+)\.(?P<reg_depth_sw>[xyzw]), r\d+\.[xyzw]{4}, t0\.[xyzw]{4}\n
+	imul null, r\d+\.[xyzw], v1\.x, l\(10\)\n
+	div r\d+\.z, l\(1\.000000, 1\.000000, 1\.000000, 1\.000000\), r\d+\.[xyzw]\n
+	mov (?<reg_pos>r\d+)\.xy, v2\.xyxx\n
+	mov r\d+\.w, l\(1\.000000\)\n
+)
+(?P<part2>
+	dp4 r\d+\.x, r\d+\.xyzw, cb1\[r1\.y\s?\+\s?4\]\.xyzw\n
+	dp4 r\d+\.y, r\d+\.xyzw, cb1\[r1\.y\s?\+\s?5\]\.xyzw\n
+	dp4 r\d+\.z, r\d+\.xyzw, cb1\[r1\.y\s?\+\s?6\]\.xyzw\n
+	dp4 r\d+\.[xyzw], r\d+\.xyzw, cb1\[r1\.y\s?\+\s?7\]\.xyzw\n
+	.*?
+	discard_nz r\d+\.[xyzw]\n
+)
+(?P<part3>
+	.*?
+	dp4 r\d+\.x, r\d+\.xyzw, cb1\[r1\.y\s?\+\s?4\]\.xyzw\n
+	dp4 r\d+\.y, r\d+\.xyzw, cb1\[r1\.y\s?\+\s?5\]\.xyzw\n
+	dp4 r\d+\.[xyzw], r\d+\.xyzw, cb1\[r1\.y\s?\+\s?7\]\.xyzw\n
+	div r\d+\.[xyzw]{2}, r\d+\.[xyzw]{4}, r\d+\.[xyzw]{4}\n
+	add r\d+\.[xyzw]{2,4}, -r\d+\.[xyzw]{4}, r\d+\.[xyzw]{4}\n
+)
+
+[ShaderRegexDecalPS.Pattern.Replace]
+${part1}\n
+ld_indexable(texture2d)(float,float,float,float) ${stereo}.xyzw, l(0, 0, 0, 0), t125.xyzw\n
+ld_indexable(texture1d)(float,float,float,float) ${stereo}.z, l(1, 0, 0, 0), t120.zwxy\n
+; Fix clipping, save unfixed r2 for use later
+; pos.x -= stereo.x * (1 - stereo.y / m_fFar / depth) * res_x/2;
+mov ${tmp1}.xyzw, ${reg_pos}.xyzw\n
+div ${stereo}.w, ${stereo}.y, cb3[34].w\n
+div ${stereo}.w, ${stereo}.w, ${reg_depth}.${reg_depth_sw}\n
+add ${stereo}.w, l(1.0), -${stereo}.w\n
+mul ${stereo}.w, ${stereo}.w, ${stereo}.x\n
+mul ${stereo}.w, ${stereo}.w, ${stereo}.z\n
+mul ${stereo}.w, ${stereo}.w, l(0.5)\n
+add ${reg_pos}.x, ${reg_pos}.x, -${stereo}.w\n
+\n${part2}\n
+; Calculate transformed unfixed r2.
+dp4 ${tmp2}.x, ${tmp1}.xyzw, cb1[r1.y+4].xyzw\n
+dp4 ${tmp2}.y, ${tmp1}.xyzw, cb1[r1.y+5].xyzw\n
+dp4 ${tmp2}.z, ${tmp1}.xyzw, cb1[r1.y+6].xyzw\n
+dp4 ${tmp2}.w, ${tmp1}.xyzw, cb1[r1.y+7].xyzw\n
+div ${tmp2}.xyzw, ${tmp2}.xyzw, ${tmp2}.wwww\n
+; Fixed transformed r2 is required later to fix texcoord.
+mov ${tmp1}.xyzw, ${reg_pos}.xyzw\n
+; Unfix transformed r2 to avoid texture blur in code below.
+mov ${reg_pos}.xyz, ${tmp2}.xyz\n
+\n${part3}\n
+; Adjust texcoord
+mov ${reg_pos}.xy, ${tmp1}.xy\n\n
+
+[ShaderRegexDecalPS.InsertDeclarations]
+dcl_constantbuffer cb3[47], immediateIndexed
+dcl_resource_texture1d (float,float,float,float) t120
 dcl_resource_texture2d (float,float,float,float) t125
 
 ;------------------------------------------------------------------------------------------------------
