--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -951,6 +951,31 @@ dcl_constantbuffer cb3[47], immediateIndexed
 dcl_resource_texture1d (float,float,float,float) t120
 dcl_resource_texture2d (float,float,float,float) t125
 
+
+[ShaderRegexAPLuminancePS]
+shader_model = ps_5_0
+temps = stereo tmp1
+
+[ShaderRegexAPLuminancePS.Pattern]
+(?s)
+(?P<part1>
+	mov (?P<reg_pos>r\d+)\.xy, v1\.xyxx\n
+)
+(?P<part2>
+	sample_l_indexable\(texture3d\)\(float,float,float,float\)\s
+		r\d+\.xyz, r\d+\.xyzx, t18\.xyzw, s0, l\(0\.000000\)\n
+)
+
+[ShaderRegexAPLuminancePS.Pattern.Replace]
+${part1}\n
+ld_indexable(texture2d)(float,float,float,float) ${stereo}.xyzw, l(0, 0, 0, 0), t125.xyzw\n
+mul ${stereo}.w, ${stereo}.x, l(0.5)\n
+add ${reg_pos}.x, ${reg_pos}.x, -${stereo}.w\n
+\n${part2}
+
+[ShaderRegexAPLuminancePS.InsertDeclarations]
+dcl_resource_texture2d (float,float,float,float) t125
+
 ;------------------------------------------------------------------------------------------------------
 ; Example of settings override by mouse button configuration
 ; Mapping of from game provided hard coded convergence values to custom values
