ELEX: Ported water splash and smoke fix to ShaderRegex and       updated it to patch 1.0.2946

--- a/ELEX/d3dx.ini
+++ b/ELEX/d3dx.ini
@@ -952,6 +952,35 @@ dcl_resource_texture1d (float,float,float,float) t120
 dcl_resource_texture2d (float,float,float,float) t125
 
 
+[ShaderRegexSplashPS]
+shader_model = ps_5_0
+temps = stereo tmp1
+
+[ShaderRegexSplashPS.Pattern]
+(?s)
+(?P<part1>
+	mul r\d+\.xy, v4\.xyxx, cb0\[38\]\.zwzz\n
+)
+(?P<part2>
+	sample_l_indexable\(texture3d\)\(float,float,float,float\)\s
+		(?P<reg_dst>r\d+\.[xyzw]{1,4}), (?P<reg_src>r\d+)\.(?P<reg_src_sw>[xyzw]{4}),\s
+		(?P<texture>t17\.[xyzw]{4}), (?P<sampler>s\d+), l\(0\.000000\)\n
+)
+
+[ShaderRegexSplashPS.Pattern.Replace]
+${part1}\n
+ld_indexable(texture2d)(float,float,float,float) ${stereo}.xyzw, l(0, 0, 0, 0), t125.xyzw\n
+; r_pos.x needs fix here for t17 only
+mov ${tmp1}.xyzw, ${reg_src}.xyzw\n
+mul ${stereo}.w, ${stereo}.x, l(0.5)\n
+add ${tmp1}.x, ${tmp1}.x, -${stereo}.w\n
+sample_l_indexable(texture3d)(float,float,float,float)
+	${reg_dst}, ${tmp1}.${reg_src_sw}, ${texture}, ${sampler}, l(0.000000)\n\n
+
+[ShaderRegexSplashPS.InsertDeclarations]
+dcl_resource_texture2d (float,float,float,float) t125
+
+
 [ShaderRegexAPLuminancePS]
 shader_model = ps_5_0
 temps = stereo tmp1
